--- a/index.html
+++ b/index.html
@@ -2070,21 +2070,30 @@ document.addEventListener('click', (ev)=>{
   }
 
   // Exponer hook para pantalla
-  window.__rrEnsureDataAndFilters = async function(){
-    // primer intento con lo que haya
-    if(ensureFiltersPopulated()){ RR.ready=true; return; }
-    // descarga fallback
-    await fetchCalendarioFallback();
-    if(ensureFiltersPopulated()){ RR.ready=true; return; }
-    // espera a que STATE.joined se llene
-    let tries=0;
-    while(tries<60 && !(window.STATE && Array.isArray(STATE.joined) && STATE.joined.length)){
-      await new Promise(r=>setTimeout(r,500));
-      tries++;
-    }
-    ensureFiltersPopulated();
-    RR.ready=true;
-  };
+  
+window.__rrEnsureDataAndFilters = async function(){
+  // Try immediate population
+  if(typeof ensureSemanaBaseline==='function') ensureSemanaBaseline();
+  if(typeof ensureFiltersPopulated==='function' && ensureFiltersPopulated()){
+    if(typeof ensureSemanaBaseline==='function') ensureSemanaBaseline();
+    return;
+  }
+  // Fetch fallback Calendario
+  if(typeof fetchCalendarioFallback==='function') await fetchCalendarioFallback();
+  if(typeof ensureFiltersPopulated==='function' && ensureFiltersPopulated()){
+    if(typeof ensureSemanaBaseline==='function') ensureSemanaBaseline();
+    return;
+  }
+  // Wait for STATE.joined
+  let tries=0;
+  while(tries<60 && !(window.STATE && Array.isArray(STATE.joined) && STATE.joined.length)){
+    await new Promise(r=>setTimeout(r,500));
+    tries++;
+  }
+  if(typeof ensureFiltersPopulated==='function') ensureFiltersPopulated();
+  if(typeof ensureSemanaBaseline==='function') ensureSemanaBaseline();
+};
+
 
   // Integrar en la navegación de la pantalla resumen
   const _oldShow = window.__showResumenScreen;
@@ -2144,11 +2153,29 @@ document.addEventListener('click', (ev)=>{
 <script>
 (function(){
   // Si tras asegurar datos no hay semanas, crear rango 1..53 como fallback visual
-  function ensureSemanaBaseline(){
-    const sel = document.getElementById('rrSemana');
-    if(!sel) return;
-    if(sel.options.length<=1){
-      for(let w=1; w<=53; w++){ const o=document.createElement('option'); o.value=String(w); o.textContent=String(w); sel.appendChild(o); }
+  
+function ensureSemanaBaseline(){
+  const sel = document.getElementById('rrSemana');
+  if(!sel) return;
+  // Reset and set only Semana 1..4
+  const keepFirst = sel.options.length ? sel.options[0] : null;
+  sel.innerHTML = '';
+  if(keepFirst){
+    sel.appendChild(keepFirst);
+    keepFirst.textContent = 'Todas';
+    keepFirst.value = '';
+  } else {
+    const first = document.createElement('option');
+    first.value = ''; first.textContent = 'Todas';
+    sel.appendChild(first);
+  }
+  for(let w=1; w<=4; w++){
+    const o = document.createElement('option');
+    o.value = String(w); o.textContent = String(w);
+    sel.appendChild(o);
+  }
+}
+
     }
   }
   // esperar a que la pantalla esté visible
@@ -2159,6 +2186,270 @@ document.addEventListener('click', (ev)=>{
     }
   });
   obs.observe(document.body, {attributes:true, childList:true, subtree:true});
+})();
+</script>
+
+
+<script>
+(function(){
+  // Fuerza rellenado de Vendedor/Gestor tras la primera renderización si quedaran vacíos
+  function enforceVendGest(){
+    const selVend = document.getElementById('rrVendedor');
+    const selGest = document.getElementById('rrGestor');
+    const needVend = selVend && selVend.options.length<=1;
+    const needGest = selGest && selGest.options.length<=1;
+    if(!needVend && !needGest) return;
+
+    // Recolectar base desde STATE.joined o fallback global si existe
+    let base = [];
+    try{
+      if(window.STATE && Array.isArray(STATE.joined) && STATE.joined.length){
+        base = STATE.joined;
+      } else if(window.RR && Array.isArray(RR.baseFallback)){
+        base = RR.baseFallback;
+      }
+    }catch(_){}
+    if(!base || !base.length) return;
+
+    function getVals(keyNames){
+      const set = new Set();
+      for(const x of base){
+        // intentar múltiples nombres de campo
+        for(const k of keyNames){
+          const foundKey = Object.keys(x).find(n=>n.toLowerCase()===k.toLowerCase());
+          if(foundKey && String(x[foundKey]).trim()){
+            set.add(String(x[foundKey]).trim());
+            break;
+          }
+        }
+      }
+      return Array.from(set).sort((a,b)=>a.localeCompare(b,'es',{numeric:true}));
+    }
+    if(needVend){
+      getVals(['Vendedor','VENDEDOR','vendedor']).forEach(v=>{
+        const o=document.createElement('option'); o.value=v; o.textContent=v; selVend.appendChild(o);
+      });
+    }
+    if(needGest){
+      getVals(['Gestor','gestor','Gestor cartera','gestor_cartera','gestor_servicio']).forEach(v=>{
+        const o=document.createElement('option'); o.value=v; o.textContent=v; selGest.appendChild(o);
+      });
+    }
+  }
+  // Ejecutar cuando se muestre la pantalla y luego tras 1s por si llega data
+  document.addEventListener('click', (ev)=>{
+    if(ev.target && ev.target.id==='btnReporteResumen'){
+      setTimeout(enforceVendGest, 300);
+      setTimeout(enforceVendGest, 1200);
+    }
+  });
+  // También al entrar por cualquier otro medio
+  if(typeof window.__showResumenScreen==='function'){
+    const old = window.__showResumenScreen;
+    window.__showResumenScreen = async function(){
+      await old();
+      setTimeout(enforceVendGest, 300);
+      setTimeout(enforceVendGest, 1200);
+    };
+  }
+})();
+</script>
+
+
+<script>
+(function(){
+  const CAL_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSGjr-XdLSamHpGQfoORmLfntJbLd-UbFpD7NdMM14x2JdMhxOYHTWQBlhYCMDu0ZTy3AYS-1Y3q91Y/pub?gid=223681507&single=true&output=csv";
+  let CAL_ROWS = [];
+  let PLAN = [];
+  const DIAS_OK = ['lunes','martes','miercoles','miércoles','jueves','viernes','sabado','sábado','domingo'];
+
+  function norm(s){ return String(s||'').trim(); }
+  function normDia(d){
+    return String(d||'').normalize('NFD').replace(/\p{Diacritic}/gu,'').toLowerCase();
+  }
+
+  function csvParse(text){
+    const rows = [];
+    let row = [], cur = '', q=false;
+    for(let i=0;i<text.length;i++){
+      const ch = text[i];
+      if(ch === '"'){
+        if(q && text[i+1] === '"'){ cur+='"'; i++; }
+        else q = !q;
+      } else if(ch === ',' && !q){
+        row.push(cur); cur='';
+      } else if((ch === '\n' || ch === '\r') && !q){
+        if(cur.length || row.length){ row.push(cur); rows.push(row); row=[]; cur=''; }
+      } else {
+        cur += ch;
+      }
+    }
+    if(cur.length || row.length){ row.push(cur); rows.push(row); }
+    if(rows.length===0) return [];
+    const header = rows.shift().map(h=>String(h||'').trim());
+    return rows.filter(r=>r.some(x=>String(x||'').trim()!=='')).map(r=>{
+      const o={};
+      for(let j=0;j<header.length;j++){ o[header[j]] = r[j]!==undefined ? r[j] : ''; }
+      return o;
+    });
+  }
+
+  function pick(obj, names){
+    const keys = Object.keys(obj);
+    for(const n of names){
+      if(n in obj) return obj[n];
+      const f = keys.find(k=>k.toLowerCase()===n.toLowerCase());
+      if(f) return obj[f];
+    }
+    return '';
+  }
+
+  function mapCalRow(x){
+    return {
+      cod: norm(pick(x,['Cod','Código','Codigo','cod','ID','Id','Cod Cliente'])),
+      gestor: norm(pick(x,['Gestor','gestor','Gestor cartera','gestor_cartera'])) || 'NO ASIGNADO',
+      vendedor: norm(pick(x,['Vendedor','VENDEDOR','vendedor'])),
+      semana: norm(pick(x,['Semana','N Semana','semana'])),
+      dia: norm(pick(x,['Día','Dia','día','dia']))
+    };
+  }
+
+  async function loadCalendario(){
+    const res = await fetch(CAL_URL, {cache:'no-store'});
+    const txt = await res.text();
+    CAL_ROWS = csvParse(txt).map(mapCalRow).filter(r=>r.cod);
+    PLAN = CAL_ROWS; // ya vienen con semana/dia/gestor/vendedor
+  }
+
+  function ensureSemana14(){
+    const sel = document.getElementById('rrSemana');
+    if(!sel) return;
+    const first = sel.options[0] || (function(){const o=document.createElement('option'); o.value=''; o.textContent='Todas'; sel.appendChild(o); return o;})();
+    sel.innerHTML='';
+    sel.appendChild(first);
+    first.value=''; first.textContent='Todas';
+    for(let w=1;w<=4;w++){ const o=document.createElement('option'); o.value=String(w); o.textContent=String(w); sel.appendChild(o); }
+  }
+
+  function populateFilters(){
+    ensureSemana14();
+    const selVend = document.getElementById('rrVendedor');
+    const selGest = document.getElementById('rrGestor');
+    function fill(sel, values){
+      if(!sel) return;
+      const first = sel.options[0] || (function(){const o=document.createElement('option'); o.value=''; o.textContent='Todos'; sel.appendChild(o); return o;})();
+      sel.innerHTML=''; sel.appendChild(first); first.value=''; first.textContent='Todos';
+      [...new Set(values.filter(v=>v))].sort((a,b)=>a.localeCompare(b,'es',{numeric:true}))
+        .forEach(v=>{ const o=document.createElement('option'); o.value=v; o.textContent=v; sel.appendChild(o); });
+    }
+    fill(selVend, PLAN.map(r=>r.vendedor));
+    fill(selGest, PLAN.map(r=>r.gestor));
+  }
+
+  function buildPlanIndex(rows){
+    const map = new Map();
+    for(const r of rows){
+      const k = r.gestor+'||'+r.semana+'||'+normDia(r.dia);
+      const it = map.get(k) || {gestor:r.gestor, semana:r.semana, dia:r.dia, asignados:0};
+      it.asignados += 1;
+      map.set(k, it);
+    }
+    return map;
+  }
+
+  function getCalls(){
+    let calls = [];
+    try{ calls = JSON.parse(localStorage.getItem('llamadas_records') || '[]'); }catch(_){}
+    if(window.STATE && Array.isArray(STATE.calls)) calls = calls.concat(STATE.calls);
+    return calls;
+  }
+
+  function buildDoneIndex(plan){
+    const idxByCod = new Map();
+    for(const r of plan){ if(r.cod) idxByCod.set(r.cod, r); }
+    const map = new Map();
+    for(const c of getCalls()){
+      const cod = norm(c.cod || c.codigo || c.cod_cliente || c.Cod || '');
+      const planRow = idxByCod.get(cod);
+      if(!planRow) continue; // fuera de plan: opcionalmente se podría contar aparte
+      const k = planRow.gestor+'||'+planRow.semana+'||'+normDia(planRow.dia);
+      const it = map.get(k) || {gestor:planRow.gestor, semana:planRow.semana, dia:planRow.dia, realizadas:0, last:null};
+      it.realizadas += 1;
+      const d = new Date(c.fecha_hora||c.fecha||c.timestamp||'');
+      if(!isNaN(d)) it.last = (!it.last || new Date(it.last) < d) ? d.toISOString() : it.last;
+      map.set(k, it);
+    }
+    return map;
+  }
+
+  function render(){
+    const fSemana = (document.getElementById('rrSemana')||{}).value || '';
+    const fDia = (document.getElementById('rrDia')||{}).value || '';
+    const fVend = (document.getElementById('rrVendedor')||{}).value || '';
+    const fGest = (document.getElementById('rrGestor')||{}).value || '';
+
+    const base = PLAN.filter(x=>{
+      if(fSemana && String(x.semana)!==String(fSemana)) return false;
+      if(fDia && normDia(x.dia)!==normDia(fDia)) return false;
+      if(fVend && x.vendedor!==fVend) return false;
+      if(fGest && x.gestor!==fGest) return false;
+      return true;
+    });
+
+    const planMap = buildPlanIndex(base);
+    const doneMap = buildDoneIndex(PLAN); // hechas se mapean al plan total; filtros se aplican por la clave
+    const keys = new Set([...planMap.keys(), ...doneMap.keys()]);
+    const rows = [];
+    for(const k of keys){
+      const p = planMap.get(k) || {gestor:'', semana:'', dia:'', asignados:0};
+      const d = doneMap.get(k) || {realizadas:0, last:null};
+      const asign = p.asignados||0, hechas = d.realizadas||0;
+      const pct = asign ? (hechas/asign*100) : (hechas?100:0);
+      rows.push({gestor:p.gestor||d.gestor||'', semana:p.semana||d.semana||'', dia:p.dia||d.dia||'', asignados:asign, realizadas:hechas, pct, last:d.last});
+    }
+    rows.sort((a,b)=> a.gestor.localeCompare(b.gestor,'es',{numeric:true}) ||
+                     String(a.semana).localeCompare(String(b.semana),'es',{numeric:true}) ||
+                     String(a.dia).localeCompare(String(b.dia),'es',{numeric:true}));
+
+    const tb = document.querySelector('#rrTbl tbody');
+    if(tb){
+      tb.innerHTML = rows.map(r=>'<tr>'
+        +'<td>'+ (r.gestor||'-') +'</td>'
+        +'<td>'+ (r.semana||'-') +'</td>'
+        +'<td>'+ (r.dia||'-') +'</td>'
+        +'<td>'+ r.asignados +'</td>'
+        +'<td>'+ r.realizadas +'</td>'
+        +'<td>'+ r.pct.toFixed(1) +'%' +'</td>'
+        +'<td>'+ (r.last ? new Date(r.last).toLocaleString() : '-') +'</td>'
+      +'</tr>').join('');
+    }
+
+    // KPIs
+    let asign=0, hechas=0; rows.forEach(r=>{ asign+=r.asignados; hechas+=r.realizadas; });
+    const cov = asign ? (hechas/asign*100) : (hechas?100:0);
+    const a = document.getElementById('kpiAsignadas'); if(a) a.textContent = String(asign);
+    const h = document.getElementById('kpiHechas'); if(h) h.textContent = String(hechas);
+    const c = document.getElementById('kpiCobertura'); if(c) c.textContent = cov.toFixed(1)+'%';
+  }
+
+  async function initResumenStandalone(){
+    // cargar csv
+    await loadCalendario();
+    populateFilters();
+    // listeners
+    ['rrSemana','rrDia','rrVendedor','rrGestor'].forEach(id=>{
+      const el = document.getElementById(id);
+      if(el) el.addEventListener('change', render);
+    });
+    render();
+  }
+
+  // enganchar al botón/pantalla ya existente
+  const oldShow = window.__showResumenScreen;
+  window.__showResumenScreen = async function(){
+    if(typeof oldShow==='function'){ oldShow(); }
+    await initResumenStandalone();
+  };
 })();
 </script>
 
